# kleviathan

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
docs/: SLACK-APP-SETUP.md
src/: cli.rs  config.rs  docker.rs  error.rs  main.rs
src/connectors/: dav_common.rs  fm_caldav.rs  fm_carddav.rs  jmap.rs  matrix.rs  mod.rs  registry.rs  slack.rs  trello.rs
src/engine/: executor.rs  graph.rs  mod.rs  planner.rs  state.rs
src/llm/: anthropic.rs  mod.rs  openai.rs
src/safety/: abuse.rs  container.rs  injection.rs  mod.rs  rate_limiter.rs
tpl/: kleviathan.jsonc
