[package]
name = "kleviathan"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
chrono = { version = "0.4.44", features = ["serde"] }
icalendar = "0.17.10"
jsonc-parser = "0.23.0"
governor = "0.10.4"
nonzero_ext = "0.3.0"
rustrict = "0.7.38"
libinjection = "0.3.8"
jmap-client = "0.4.0"
matrix-sdk = { version = "0.16.0", default-features = false, features = [
    "e2e-encryption",
    "automatic-room-key-forwarding",
    "sqlite",
    "rustls-tls",
] }
tempfile = "3.19.1"
quick-xml = { version = "0.39.2", features = ["serialize"] }
uuid = { version = "1.22.0", features = ["v4", "fast-rng"] }
